[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/GameLoop.gd" type="Script" id=1]
[ext_resource path="res://mats/handle/mat_handle.tres" type="Material" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://src/draggable.gd" type="Script" id=4]
[ext_resource path="res://src/LineDraw.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35, 35 )

[node name="MainScene" type="Node2D"]
position = Vector2( 0.563599, 0 )

[node name="GameLoop" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="handles" type="Node2D" parent="."]

[node name="top_in" type="KinematicBody2D" parent="handles"]
position = Vector2( 146.5, 80.1271 )
input_pickable = true
script = ExtResource( 4 )

[node name="vis" type="Sprite" parent="handles/top_in"]
material = ExtResource( 2 )
texture = ExtResource( 3 )

[node name="collider" type="CollisionShape2D" parent="handles/top_in"]
shape = SubResource( 1 )

[node name="top_out" type="KinematicBody2D" parent="handles"]
position = Vector2( 877.094, 78.9252 )
input_pickable = true
script = ExtResource( 4 )

[node name="vis" type="Sprite" parent="handles/top_out"]
material = ExtResource( 2 )
texture = ExtResource( 3 )

[node name="collider" type="CollisionShape2D" parent="handles/top_out"]
shape = SubResource( 1 )

[node name="right_in" type="KinematicBody2D" parent="handles"]
position = Vector2( 950.357, 151.624 )
input_pickable = true
script = ExtResource( 4 )

[node name="vis" type="Sprite" parent="handles/right_in"]
material = ExtResource( 2 )
texture = ExtResource( 3 )

[node name="collider" type="CollisionShape2D" parent="handles/right_in"]
shape = SubResource( 1 )

[node name="right_out" type="KinematicBody2D" parent="handles"]
position = Vector2( 954.166, 889.366 )
input_pickable = true
script = ExtResource( 4 )

[node name="vis" type="Sprite" parent="handles/right_out"]
material = ExtResource( 2 )
texture = ExtResource( 3 )

[node name="collider" type="CollisionShape2D" parent="handles/right_out"]
shape = SubResource( 1 )

[node name="btm_in" type="KinematicBody2D" parent="handles"]
position = Vector2( 879.777, 961.501 )
input_pickable = true
script = ExtResource( 4 )

[node name="vis" type="Sprite" parent="handles/btm_in"]
material = ExtResource( 2 )
texture = ExtResource( 3 )

[node name="collider" type="CollisionShape2D" parent="handles/btm_in"]
shape = SubResource( 1 )

[node name="btm_out" type="KinematicBody2D" parent="handles"]
position = Vector2( 158.339, 966.052 )
input_pickable = true
script = ExtResource( 4 )

[node name="vis" type="Sprite" parent="handles/btm_out"]
material = ExtResource( 2 )
texture = ExtResource( 3 )

[node name="collider" type="CollisionShape2D" parent="handles/btm_out"]
shape = SubResource( 1 )

[node name="left_in" type="KinematicBody2D" parent="handles"]
position = Vector2( 84.5128, 892.226 )
input_pickable = true
script = ExtResource( 4 )

[node name="vis" type="Sprite" parent="handles/left_in"]
material = ExtResource( 2 )
texture = ExtResource( 3 )

[node name="collider" type="CollisionShape2D" parent="handles/left_in"]
shape = SubResource( 1 )

[node name="left_out" type="KinematicBody2D" parent="handles"]
position = Vector2( 71.8009, 153.262 )
input_pickable = true
script = ExtResource( 4 )

[node name="vis" type="Sprite" parent="handles/left_out"]
material = ExtResource( 2 )
texture = ExtResource( 3 )

[node name="collider" type="CollisionShape2D" parent="handles/left_out"]
shape = SubResource( 1 )

[node name="LineDraw" type="Node2D" parent="."]
script = ExtResource( 5 )

[connection signal="input_event" from="handles/top_in" to="handles/top_in" method="_on_KinematicBody2D_input_event"]
[connection signal="input_event" from="handles/top_out" to="handles/top_out" method="_on_KinematicBody2D_input_event"]
[connection signal="input_event" from="handles/right_in" to="handles/right_in" method="_on_KinematicBody2D_input_event"]
[connection signal="input_event" from="handles/right_out" to="handles/right_out" method="_on_KinematicBody2D_input_event"]
[connection signal="input_event" from="handles/btm_in" to="handles/btm_in" method="_on_KinematicBody2D_input_event"]
[connection signal="input_event" from="handles/btm_out" to="handles/btm_out" method="_on_KinematicBody2D_input_event"]
[connection signal="input_event" from="handles/left_in" to="handles/left_in" method="_on_KinematicBody2D_input_event"]
[connection signal="input_event" from="handles/left_out" to="handles/left_out" method="_on_KinematicBody2D_input_event"]
